<resources>
    <string name="app_name">Pitch Counter</string>

    <string name="game_entry_numeric_default_value">0</string>

    <string name="game_entry_pitch_count_label">Pitches</string>

    <string name="game_entry_strike_label">Strike</string>
    <string name="game_entry_ball_label">Ball</string>
    <string name="game_entry_hit_label">Hit</string>
    <string name="game_entry_walk_label">Walk</string>
    <string name="game_entry_strikeout_label">Strikeout</string>

    <string name="summaries_hit_label">Hits</string>
    <string name="summaries_walk_label">Walks</string>
    <string name="summaries_strikeout_label">Strikeouts</string>

    <string name="title_gamesummary_list">Season Stats</string>
    <string name="title_gamesummary_detail">Game Summary</string>
    <string name="averages_balls_label">Balls</string>
    <string name="averages_pitches_per_game">Pitches Per Game</string>
    <string name="averages_strikes_label">Strikes</string>
    <string name="game_entry_undo_menu_item">Undo</string>
    <string name="transition_name_game_to_master">GameToMaster</string>
    <string name="transition_name_game_hero_master_hero">GameHeroToMasterHero</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="fab_summary_list_start_or_resume_game_content_description">Start or resume game</string>
    <string name="distribution_balls">%1$d Balls</string>
    <string name="distribution_strikes">%1$d Strikes</string>
    <string name="game_detail_hero_image_content_description">Baseball themed background</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
