<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.akodiakson.pitchcounter.fragment.GameFragment">

    <include layout="@layout/layout_pitch_count_and_fab" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/button_container_elevation_top"
        android:minHeight="@dimen/button_container_min_height">

        <LinearLayout
            android:id="@+id/game_entry_hit_button"
            style="@style/ButtonContainerStyleSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/game_entry_hit_button_value"
                style="@style/ButtonValueTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_entry_numeric_default_value" />

            <TextView
                android:id="@+id/game_entry_hit_button_label"
                style="@style/ButtonLabelTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_entry_hit_label" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/game_entry_walk_button"
            style="@style/ButtonContainerStyleSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/game_entry_walk_button_value"
                style="@style/ButtonValueTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_entry_numeric_default_value" />

            <TextView
                android:id="@+id/game_entry_walk_button_label"
                style="@style/ButtonLabelTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_entry_walk_label" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/game_entry_strikeout_button"
            style="@style/ButtonContainerStyleSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/game_entry_hit_strikeout_button_value"
                style="@style/ButtonValueTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_entry_numeric_default_value" />

            <TextView
                android:id="@+id/game_entry_hit_strikeout_label"
                style="@style/ButtonLabelTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_entry_strikeout_label" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:elevation="@dimen/button_container_elevation_bottom"
        android:orientation="vertical">

        <include layout="@layout/layout_ball_strike_distribution_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:minHeight="@dimen/bottom_container_height"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/game_entry_ball_button"
                style="@style/ButtonContainerStyleSecondary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/game_entry_ball_button_value"
                    style="@style/ButtonValueTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toLeftOf="@+id/game_entry_ball_button_label"
                    android:layout_toStartOf="@+id/game_entry_ball_button_label"
                    android:text="@string/game_entry_numeric_default_value" />

                <TextView
                    android:id="@+id/game_entry_ball_button_label"
                    style="@style/ButtonLabelTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/game_entry_ball_label" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/game_entry_strike_button"
                style="@style/ButtonContainerStyleSecondary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|end"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/game_entry_strike_button_value"
                    style="@style/ButtonValueTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toLeftOf="@+id/game_entry_strike_button_label"
                    android:layout_toStartOf="@+id/game_entry_strike_button_label"
                    android:text="@string/game_entry_numeric_default_value" />

                <TextView
                    android:id="@+id/game_entry_strike_button_label"
                    style="@style/ButtonLabelTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/game_entry_strike_label" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>
